fix spacing

--- a/spearhead/assets/sass/_posts-and-pages.scss
+++ b/spearhead/assets/sass/_posts-and-pages.scss
@@ -79,7 +79,7 @@
 	.excerpt-more-link {
 		.more-link {
 			font-size: calc(0.75 * var(--global--font-size-base));
-			margin-left: var(--global--spacing-horizontal);
+			margin-left: 1rem;
 		}
 	}
 }
