--- a/spearhead/style-rtl.css
+++ b/spearhead/style-rtl.css
@@ -110,7 +110,7 @@ Tags: one-column, flexible-header, accessibility-ready, custom-colors, custom-me
 
 .entry-content .excerpt-more-link .more-link {
 	font-size: calc(0.75 * var(--global--font-size-base));
-	margin-right: var(--global--spacing-horizontal);
+	margin-right: 1rem;
 }
 
 .has-link-color a, a {
