--- a/spearhead/style.css
+++ b/spearhead/style.css
@@ -110,7 +110,7 @@ Tags: one-column, flexible-header, accessibility-ready, custom-colors, custom-me
 
 .entry-content .excerpt-more-link .more-link {
 	font-size: calc(0.75 * var(--global--font-size-base));
-	margin-left: var(--global--spacing-horizontal);
+	margin-left: 1rem;
 }
 
 .has-link-color a, a {
